# MACF-fuxian

./: retrieval_baselines.py
amazon_beauty/: query_data1.csv  user_profile.csv
amazon_clothing/: knowledge1.csv  query_data1.csv  user_profile.csv
amazon_music/: knowledge1.csv  query_data1.csv  user_profile.csv
macf_reproduction/: .env.example  README.md  pyproject.toml  requirements.txt
macf_reproduction/config/: default.yaml
macf_reproduction/src/macf/: __init__.py  config.py  data.py  evaluator.py  llm.py  main.py  prompts.py  ranking.py  runner.py  state.py  sufficiency.py  types.py
macf_reproduction/src/macf/agents/: __init__.py  base.py  item_agent.py  orchestrator.py  user_agent.py
macf_reproduction/src/macf/demo/: sample_data.py
macf_reproduction/src/macf/pipelines/: __init__.py  discussion.py
macf_reproduction/src/macf/tools/: __init__.py  base.py  csv_tools.py  mock_tools.py
macf_reproduction/tests/: test_agent_payload_parsing.py  test_data_format_compat.py  test_discussion_loop.py  test_evaluator_csv.py  test_llm_backend.py  test_prompt_rendering.py  test_retrieval_baselines_script.py  test_sufficiency.py
